# dc-ai

hw-2/data-analizer/: eda.ipynb  pyproject.toml
hw-2/data-analizer/data/: data_markup_review.csv
hw-2/data-analizer/data/data_markup_1/: 034c98a7_https___roblox.com_.json  03a9e3fa_https___otzovik.com_.json  0a44f209_https___hoyoverse.com_.json  0bb02234_https___1000.menu_.json  0e6af338_https___xbox.com_.json  1151047b_https___ea.com_.json  13266a0a_https___starbucks.com_.json  150d970c_https___sikayetvar.com_.json  179f2934_https___sports.yahoo.com_.json  19d37a9c_https___mercari.com_.json  233f6468_https___fc2.com_.json  25807472_https___crazygames.com_.json  268c97cb_https___office365.com_.json  292eb4bd_https___thekitchn.com_.json  298e4090_https___gamerant.com_.json  2bbfc652_https___news.yahoo.com_.json  2bd307bc_https___dexerto.com_.json  2c40e0db_https___office.com_.json  31d77567_https___music.youtube.com_.json  329b9e1e_https___steamcommunity.com_.json  37b904a7_https___pinterest.com_.json  390f5b1b_https___olx.pl_.json  3fa510fa_https___mcdonalds.com_.json  40a557c5_https___aliexpress.com_.json  43453c4a_https___bauhaus.info_.json  43b8676b_https___ya.ru_.json  44a7e73e_https___yr.no_.json  47c3c4b6_https___cian.ru_.json  4e4f3456_https___usps.com_.json  4ffc2d74_https___pochta.ru_.json  5060a711_https___totaladblock.com_.json  55928154_https___yandex.ru_.json  55a089b4_https___google.it_.json  572d9733_https___allrecipes.com_.json  5945ff5a_https___chocozap.jp_.json  67e342a5_https___epicgames.com_.json  (+29 more)
hw-3/: .gitignore  README.md  pyproject.toml
(+227 files in other folders)
